--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
                     <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4 text-black">
                             <!-- <h3 class="h3 mb-4 text-black">Moving Towards a Sustainable Future</h3> -->
-                            <h5 class="h5 mb-4 text-black" style="line-height: 1.75;">I am a fifth-year Ph.D. candidate in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to labor, health, and inequality. I am currently studying the economic costs of energy transition such as labor reallocation costs of fossil fuel workers and fiscal rupture in coal-rich local governments. I will be on the 2025–26 academic job market.</h5>
+                            <h5 class="h5 mb-4 text-black" style="line-height: 1.75;">I am a fifth-year Ph.D. candidate in Economics at the UC Santa Barbara, and a Special Sworn Researcher with the U.S. Census Bureau. My research focuses on the economics of energy and the environment, with a particular interest in labor and public policy issues. Currently, I am investigating the economic challenges of the energy transition, including the labor reallocation of fossil fuel workers and the fiscal impacts on coal-dependent local governments. I will be on the 2025–26 academic job market.</h5>
                             <h5 class="h5 mb-4 text-black" style="line-height: 1.75;">Email: minwoohyun12[at]gmail.com</h5>
-                            <h5 class="h5 mb-4 text-black" style="line-height: 1.75;"><a href="https://scholar.google.co.kr/citations?user=U4vjKx8AAAAJ&hl=en&oi=ao">Google Scholar</a></h5>
+                            <h5 class="h5 mb-4 text-black" style="line-height: 1.75;"><a href="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/preview?usp=sharing"><b>CV</b></a> | <a href="https://scholar.google.co.kr/citations?user=U4vjKx8AAAAJ&hl=en&oi=ao"><b>Google Scholar</b></a></h5>
                             <!-- <p>I am a Ph.D. candidate in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to labor, health, and inequality. I am currently studying the economic costs of energy transition such as labor reallocation costs of fossil fuel workers and fiscal rupture in coal-rich local governments.</p> -->
-                            <h5 class="h5 mb-4 text-black" style="line-height: 1.75;">CV</h5>
-                            <div style="display: flex; justify-content: center;">
+                            <!-- <h5 class="h5 mb-4 text-black" style="line-height: 1.75;"><a href="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/preview?usp=sharing">CV</a></h5> -->
+                            <!-- <div style="display: flex; justify-content: center;">
                                 <iframe src="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/preview?usp=sharing" marginwidth="0" marginheight="0" frameborder="no" scrolling="yes" style="border-width:2px; border-color:#333; background:#FFF; border-style:solid;">
                                 </iframe>
-                            </div>
+                            </div> -->
                         </div>
 
                         <!-- <div class="mb-4">
@@ -255,7 +255,7 @@
             </div>
         </section>
 
-        <section class="site-section bg-light" id="education-section">
+        <!-- <section class="site-section bg-light" id="education-section">
             <div class="container">
                 <div class="row mb-5 justify-content-center">
                     <div class="col-12 text-center" data-aos="fade">
@@ -277,140 +277,10 @@
                         <h5 class="h5 mb-4"><a href="https://econ.ucsb.edu/">University of California, Santa Barbara</a></h5>
                         <h6 class="h6 mb-4 text-black">Ph.D. Candidate in Economics</h6>
                         <h6 class="h6 mb-4 text-black">M.A. in Economics, Aug 2021</h6>
-                        <!-- <ul class="list-unstyled ul-check success"> -->
-                            <!-- <li></li> -->
-                        <!-- </ul> -->
                     </div>
                 </div>
-
-                <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
-                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
-                        </h2>
-                    </div>
-
-                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Feb 2017 - Jan 2019</p>
-                    </div>
-
-                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h5 class="h5 mb-4"><a href="https://www.business.kaist.edu/">Korea Advanced Institute of Science and Technology</a></h5>
-                        <h6 class="h6 mb-4 text-black">M.S. in Green Business and Policy, Feb 2019</h6>
-                        <!-- <ul class="list-unstyled ul-check success"> -->
-                            <!-- <li></li> -->
-                        <!-- </ul> -->
-                    </div>
-                </div>
-
-                <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
-                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
-                        </h2>
-                    </div>
-
-                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Mar 2011 - Jan 2017</p>
-                    </div>
-
-                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h5 class="h5 mb-4"><a href="https://www.yonsei.ac.kr/en_sc/index.jsp">Yonsei University</a></h5>
-                        <h6 class="h6 mb-4 text-black">B.S. in Chemical Engineering, Feb 2017</h6>
-                        <!-- <ul class="list-unstyled ul-check success"> -->
-                            <!-- <li></li> -->
-                        <!-- </ul> -->
-                    </div>
-                </div>
-
-                <!-- <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
-                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
-                        </h2>
-                    </div>
-
-                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Mar 2011 - Jan 2017</p>
-                    </div>
-
-                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://www.yonsei.ac.kr/en_sc/index.jsp">Yonsei University</a></h3>
-                        <h5 class="h5 mb-4 text-black">B.S. in Chemical Engineering, Feb 2017</h5> -->
-                        <!-- <ul class="list-unstyled ul-check success">
-                            <li><em>Honors with Academic Excellence</em></li>
-                        </ul> -->
-                    <!-- </div>
-                </div> -->
-
             </div>
-        </section>
-
-        <section class="site-section" id="experience-section">
-            <div class="container">
-                <div class="row mb-5 justify-content-center">
-                    <div class="col-12 text-center" data-aos="fade">
-                        <h2 class="section-title mb-3">Experience</h2>
-                    </div>
-                </div>
-
-                <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
-                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
-                        </h2>
-                    </div>
-
-                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Mar 2024 - Present</p>
-                    </div>
-
-                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h5 class="h5 mb-4"><a href="https://emlab.ucsb.edu/">U.S. Census Bureau</a></h5>
-                        <h6 class="h6 mb-4 text-black">Special Sworn Researcher</h6>
-                        <!-- <ul class="list-unstyled ul-check success">         
-                            <li>Project Title: "<a href="https://emlab.ucsb.edu/programs/climate-energy">Estimating the Effect of Environmental Policy on Welfare Inequality</a>"</li>
-                        </ul> -->
-                    </div>
-                </div>
-
-                <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
-                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
-                        </h2>
-                    </div>
-
-                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Jun 2022 - Dec, 2022</p>
-                    </div>
-
-                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h5 class="h5 mb-4"><a href="https://emlab.ucsb.edu/">Environmental Markets Lab (emLab), UCSB</a></h5>
-                        <h6 class="h6 mb-4 text-black">Graduate Student Researcher</h6>
-                        <!-- <ul class="list-unstyled ul-check success">         
-                            <li>Project Title: "<a href="https://emlab.ucsb.edu/programs/climate-energy">Estimating the Effect of Environmental Policy on Welfare Inequality</a>"</li>
-                        </ul> -->
-                    </div>
-                </div>
-
-                <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
-                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
-                        </h2>
-                    </div>
-
-                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Feb 2019 - Jul 2020</p>
-                    </div>
-
-                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h5 class="h5 mb-4"><a href="https://minwoo-hyun.github.io/#experience-section">Sustainable Development Research Center, KAIST</a></h5>
-                        <h6 class="h6 mb-4 text-black">Research Associate</h6>
-                        <!-- <ul class="list-unstyled ul-check success">         
-                            <li>Project Title: "Load Impact Evaluation for a Korean Peak Time Rebate Pilot with Residential and Small Commercial and Industrial Customers" (<a href="https://www.epri.com/research/products/000000003002016695">Technical Report</a>)</li>
-                            <li>Project Title: "<a href="https://cordis.europa.eu/project/id/821471">Exploring National and Global Actions to reduce Greenhouse gas Emissions</a>"</li>
-                        </ul> -->
-                    </div>
-                </div>
-
-            </div>
-        </section>
+        </section> -->
 
         <section class="site-section bg-light" id="pt-section">
             <div class="container">
