--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                             <span>North Hall, Santa Barbara, CA, USA (93106)</span>
                         </p>
                     </div>
-                    <!-- <div class="col-md-4 text-center">
+                    <div class="col-md-4 text-center">
                         <p class="mb-4">
                             <span class="icon-phone d-block h4 text-primary"></span>
                             <a href="tel:+821075509336">+1-805-971-1031</a>
@@ -431,7 +431,7 @@
                 </div>
 
             </div>
-        </section> --> -->
+        </section> -->
 
 
         <footer class="site-footer">
