--- a/index.html
+++ b/index.html
@@ -205,11 +205,10 @@
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
                         <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
-                        <h5 class="h5 mb-4 text-black"><b>M. Hyun</b> (2024), “The Energy Transition and Labor Market Dynamics: Evidence from Worker-Level Microdata”</h5>
-                        <h5 class="h5 mb-4 text-black"><b>M. Hyun</b> (2024), “Fossil Fuels and Fiscal Federalism: Evidence from the US Coal Declines”</h5>
-                        <h5 class="h5 mb-4 text-black"><b>M. Hyun</b> (2024), “The Role of School Finance in Juvenile Criminal Behavior: Evidence from the US Coal Communities”</h5>
-                        <h5 class="h5 mb-4 text-black">M. Anderson, <b>M. Hyun</b>, and J. Lee (2022), <a href="https://www.nber.org/papers/w29637">“Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts”</a>,
-                            Revise and Resubmit, <em>The Economic Journal</em></h5>
+                        <h5 class="h5 mb-4 text-black">The Energy Transition and Labor Market Dynamics: Evidence from Worker-Level Microdata<br><b>Hyun, Minwoo</b> (2024)</h5>
+                        <h5 class="h5 mb-4 text-black">Fossil Fuels and Fiscal Federalism: Evidence from the US Coal Declines<br><b>Hyun, Minwoo</b> (2024)</h5>
+                        <h5 class="h5 mb-4 text-black">The Role of School Finance in Juvenile Criminal Behavior: Evidence from the US Coal Communities<br><b>Hyun, Minwoo</b> (2024)</h5>
+                        <h5 class="h5 mb-4 text-black"><a href="https://www.nber.org/papers/w29637">“Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts”</a><br>Anderson, Michael, <b>Minwoo Hyun</b>, and Jaecheol Lee (2022)<br>Revise and Resubmit, <em>The Economic Journal</em></h5>
                     </div>
                 </div>
 
@@ -244,12 +243,9 @@
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
                         <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
-                        <h5 class="h5 mb-4 text-black"><b>M. Hyun</b>, A. Cherp, J. Jewell, Y. Kim, and J. Eom (2023), <a href="https://doi.org/10.1016/j.rset.2023.100050">“Feasibility trade-offs in decarbonisation of power sector with high coal dependence: A case of Korea”</a>,
-                            <em>Renewable and Sustainable Energy Transition</em></h5>
-                        <h5 class="h5 mb-4 text-black">J. Eom, <b>M. Hyun</b>, J. Lee, and H. Lee (2020), <a href="https://doi.org/10.1038/s41560-020-00698-1">“Increase in household energy consumption due to ambient air pollution”</a>,
-                            <em>Nature Energy</em></h5>
-                        <h5 class="h5 mb-4 text-black"><b>M. Hyun</b>, Y. Kim, and J. Eom (2020), <a href="https://doi.org/10.1016/j.enpol.2020.111918">“Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment”</a>,
-                            <em>Energy Policy</em></h5>
+                        <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1016/j.rset.2023.100050">Feasibility trade-offs in decarbonisation of power sector with high coal dependence: A case of Korea</a><br><b>Hyun, Minwoo</b>, Aleh Cherp, Jessica Jewell, Youngjae Kim, and Jiyong Eom (2023)<br><em>Renewable and Sustainable Energy Transition</em></h5>
+                        <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1038/s41560-020-00698-1">Increase in household energy consumption due to ambient air pollution</a><br>Eom, Jiyong, <b>Minwoo Hyun</b>, Jaewoong Lee, and Hyoseop Lee (2020)<br><em>Nature Energy</em></h5>
+                        <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1016/j.enpol.2020.111918">Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment</a><br><b>Hyun, Minwoo</b>, Yeongjae Kim, and Jiyong Eom (2020)<br><em>Energy Policy</em></h5>
                     </div>
                 </div>
             </div>
