--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0">Minwoo Hyun</a></h1>
                     </div>
 
-                    <div class="col-12 col-md-9 d-none d-xl-block" style="font-size: 18px">
+                    <div class="col-12 col-md-9 d-none d-xl-block" style="font-size: 24px">
                         <nav class="site-navigation position-relative text-right" role="navigation">
 
                             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
@@ -195,10 +195,10 @@
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
                         <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
-                        <h5 class="h5 mb-4 text-black"><b>The Energy Transition and Labor Market Dynamics: Evidence from Worker-Level Microdata</b><br><b>Hyun, Minwoo</b> (2024)</h5>
-                        <h5 class="h5 mb-4 text-black"><b>Fossil Fuels and Fiscal Federalism: Evidence from the US Coal Declines</b><br><b>Hyun, Minwoo</b> (2024)</h5>
-                        <h5 class="h5 mb-4 text-black"><b>The Role of School Finance in Juvenile Criminal Behavior: Evidence from the US Coal Communities</b><br><b>Hyun, Minwoo</b> (2024)</h5>
-                        <h5 class="h5 mb-4 text-black"><a href="https://www.nber.org/papers/w29637"><b>Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts</b></a><br>Anderson, Michael, <b>Minwoo Hyun</b>, and Jaecheol Lee (2022)<br>Revise and Resubmit, <em>The Economic Journal</em></h5>
+                        <h5 class="h5 mb-4 text-black"><b>The Energy Transition and Labor Market Dynamics: Evidence from Worker-Level Microdata</b><br><u>Hyun, Minwoo</u> (2024)</h5>
+                        <h5 class="h5 mb-4 text-black"><b>Fossil Fuels and Fiscal Federalism: Evidence from the US Coal Declines</b><br><u>Hyun, Minwoo</u> (2024)</h5>
+                        <h5 class="h5 mb-4 text-black"><b>The Role of School Finance in Juvenile Criminal Behavior: Evidence from the US Coal Communities</b><br><u>Hyun, Minwoo</u> (2024)</h5>
+                        <h5 class="h5 mb-4 text-black"><a href="https://www.nber.org/papers/w29637"><b>Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts</b></a><br>Anderson, Michael, <u>Minwoo Hyun</u>, and Jaecheol Lee (2022)<br>Revise and Resubmit, <em>The Economic Journal</em></h5>
                     </div>
                 </div>
 
@@ -233,9 +233,9 @@
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
                         <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
-                        <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1016/j.rset.2023.100050"><b>Feasibility trade-offs in decarbonisation of power sector with high coal dependence: A case of Korea</b></a><br><b>Hyun, Minwoo</b>, Aleh Cherp, Jessica Jewell, Youngjae Kim, and Jiyong Eom (2023)<br><em>Renewable and Sustainable Energy Transition</em></h5>
-                        <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1038/s41560-020-00698-1"><b>Increase in household energy consumption due to ambient air pollution</b></a><br>Eom, Jiyong, <b>Minwoo Hyun</b>, Jaewoong Lee, and Hyoseop Lee (2020)<br><em>Nature Energy</em></h5>
-                        <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1016/j.enpol.2020.111918"><b>Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment</b></a><br><b>Hyun, Minwoo</b>, Yeongjae Kim, and Jiyong Eom (2020)<br><em>Energy Policy</em></h5>
+                        <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1016/j.rset.2023.100050"><b>Feasibility trade-offs in decarbonisation of power sector with high coal dependence: A case of Korea</b></a><br><u>Hyun, Minwoo</u>, Aleh Cherp, Jessica Jewell, Youngjae Kim, and Jiyong Eom (2023)<br><em>Renewable and Sustainable Energy Transition</em></h5>
+                        <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1038/s41560-020-00698-1"><b>Increase in household energy consumption due to ambient air pollution</b></a><br>Eom, Jiyong, <u>Minwoo Hyun</u>, Jaewoong Lee, and Hyoseop Lee (2020)<br><em>Nature Energy</em></h5>
+                        <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1016/j.enpol.2020.111918"><b>Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment</b></a><br><u>Hyun, Minwoo</u>, Yeongjae Kim, and Jiyong Eom (2020)<br><em>Energy Policy</em></h5>
                     </div>
                 </div>
             </div>
