--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
                         <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
-                        <h5 class="h5 mb-4 text-black"><b>The Energy Transition and Labor Market Dynamics: Evidence from Worker-Level Microdata</b><br><u>Hyun, Minwoo</u> (2024)</h5>
+                        <h5 class="h5 mb-4 text-black"><b>The Energy Transition and Labor Market Dynamics: Evidence from Worker-Level Microdata</b><br><u style="text-underline-offset: 3px;">Hyun, Minwoo</u> (2024)</h5>
                         <h5 class="h5 mb-4 text-black"><b>Fossil Fuels and Fiscal Federalism: Evidence from the US Coal Declines</b><br><u>Hyun, Minwoo</u> (2024)</h5>
                         <h5 class="h5 mb-4 text-black"><b>The Role of School Finance in Juvenile Criminal Behavior: Evidence from the US Coal Communities</b><br><u>Hyun, Minwoo</u> (2024)</h5>
                         <h5 class="h5 mb-4 text-black"><a href="https://www.nber.org/papers/w29637"><b>Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts</b></a><br>Anderson, Michael, <u>Minwoo Hyun</u>, and Jaecheol Lee (2022)<br>Revise and Resubmit, <em>The Economic Journal</em></h5>
