--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
                         <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
-                        <h5 class="h5 mb-4 text-black"><b>The Energy Transition and Labor Market Dynamics: Evidence from Worker-Level Microdata</b><br><u style="text-underline-offset: 5px;">Hyun, Minwoo</u> (2024)</h5>
-                        <h5 class="h5 mb-4 text-black"><b>Fossil Fuels and Fiscal Federalism: Evidence from the US Coal Declines</b><br><u style="text-underline-offset: 5px;">Hyun, Minwoo</u> (2024)</h5>
-                        <h5 class="h5 mb-4 text-black"><b>The Role of School Finance in Juvenile Criminal Behavior: Evidence from the US Coal Communities</b><br><u style="text-underline-offset: 5px;">Hyun, Minwoo</u> (2024)</h5>
+                        <h5 class="h5 mb-4 text-black"><b>Trapped and Transferred: Skill Constraints and Geographic Frictions in the Energy Transition</b><br><u style="text-underline-offset: 5px;">Hyun, Minwoo</u> (2025)</h5>
+                        <h5 class="h5 mb-4 text-black"><b>Fossil Fuels and Fiscal Federalism: How Intergovernmental Transfers Respond to Local Coal Industry Declines</b><br><u style="text-underline-offset: 5px;">Hyun, Minwoo</u> (2025)</h5>
+                        <h5 class="h5 mb-4 text-black"><b>Industrial Decline Raises Juvenile Antisocial Behavior: Evidence from the US Coal Communities</b><br><u style="text-underline-offset: 5px;">Hyun, Minwoo</u> (2025)</h5>
                         <h5 class="h5 mb-4 text-black"><a href="https://www.nber.org/papers/w29637"><b>Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts</b></a><br>Anderson, Michael, <u style="text-underline-offset: 5px;">Minwoo Hyun</u>, and Jaecheol Lee (2022)<br>Revise and Resubmit, <em>The Economic Journal</em></h5>
                     </div>
                 </div>
@@ -235,7 +235,12 @@
                         <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
                         <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1016/j.rset.2023.100050"><b>Feasibility trade-offs in decarbonisation of power sector with high coal dependence: A case of Korea</b></a><br><u style="text-underline-offset: 5px;">Hyun, Minwoo</u>, Aleh Cherp, Jessica Jewell, Youngjae Kim, and Jiyong Eom (2023)<br><em>Renewable and Sustainable Energy Transition</em></h5>
                         <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1038/s41560-020-00698-1"><b>Increase in household energy consumption due to ambient air pollution</b></a><br>Eom, Jiyong, <u style="text-underline-offset: 5px;">Minwoo Hyun</u>, Jaewoong Lee, and Hyoseop Lee (2020)<br><em>Nature Energy</em></h5>
-                        <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1016/j.enpol.2020.111918"><b>Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment</b></a><br><u style="text-underline-offset: 5px;">Hyun, Minwoo</u>, Yeongjae Kim, and Jiyong Eom (2020)<br><em>Energy Policy</em></h5>
+                        <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1016/j.enpol.2020.111918"><b>Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment</b></a>
+                            <br>
+                            <span style="display: block; margin-top: 10px;">
+                                <u style="text-underline-offset: 5px;">Hyun, Minwoo</u>, Yeongjae Kim, and Jiyong Eom (2020)
+                            </span>
+                            <br><em>Energy Policy</em></h5>
                     </div>
                 </div>
             </div>
