--- a/index.html
+++ b/index.html
@@ -234,10 +234,15 @@
                     <div class="col-12">
                         <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
                         <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1016/j.rset.2023.100050"><b>Feasibility trade-offs in decarbonisation of power sector with high coal dependence: A case of Korea</b></a><br><u style="text-underline-offset: 5px;">Hyun, Minwoo</u>, Aleh Cherp, Jessica Jewell, Youngjae Kim, and Jiyong Eom (2023)<br><em>Renewable and Sustainable Energy Transition</em></h5>
-                        <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1038/s41560-020-00698-1"><b>Increase in household energy consumption due to ambient air pollution</b></a><br>Eom, Jiyong, <u style="text-underline-offset: 5px;">Minwoo Hyun</u>, Jaewoong Lee, and Hyoseop Lee (2020)<br><em>Nature Energy</em></h5>
+                        <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1038/s41560-020-00698-1"><b>Increase in household energy consumption due to ambient air pollution</b></a>
+                            <br>
+                            <span style="display: block; margin-top: 5px;">
+                                Eom, Jiyong, <u style="text-underline-offset: 5px;">Minwoo Hyun</u>, Jaewoong Lee, and Hyoseop Lee (2020)
+                            </span>
+                            <br><em>Nature Energy</em></h5>
                         <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1016/j.enpol.2020.111918"><b>Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment</b></a>
                             <br>
-                            <span style="display: block; margin-top: 10px;">
+                            <span style="display: block; margin-top: 5px;">
                                 <u style="text-underline-offset: 5px;">Hyun, Minwoo</u>, Yeongjae Kim, and Jiyong Eom (2020)
                             </span>
                             <br><em>Energy Policy</em></h5>
