--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                             <span style="display: block; margin-top: 5px;">
                                 <u style="text-underline-offset: 5px;">Hyun, Minwoo</u>, Yeongjae Kim, and Jiyong Eom (2020)
                             </span>
-                            <br><em>Energy Policy</em></h5>
+                            <em style="margin-top: 5px; display: inline-block;">Energy Policy</em>
                     </div>
                 </div>
             </div>
